<resources>
    <string name="app_name">Shunel Admin</string>
    <string name="typeAdminId">&#160;&#160;請輸入帳號</string>
    <string name="typeAdminPassword">&#160;&#160;請輸入密碼</string>
    <string name="login">登入</string>
    <string name="fotgetpassword">忘記密碼</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="member">人員管理</string>
    <string name="product">商品管理</string>
    <string name="price">銷售總額</string>
    <string name="news">消息</string>
    <string name="textNoNetwork">沒有網路</string>
    <string name="loginnsuccess">"登入成功 "</string>

    <string name="Product">商品</string>
    <string name="msg">訊息</string>
    <string name="Promotion">促銷</string>
    <string name="hotProduct">熱門</string>
    <string name="system">系統</string>

    <string name="chat">提問</string>
    <string name="manageUserAccount">會員帳戶管理</string>
    <string name="name">姓名</string>
    <string name="id">帳號</string>
    <string name="edit">編輯</string>

    <string name="textNoUserAccountFound">沒有會員資料</string>
    <string name="order_id_text">訂單編號：</string>
    <string name="text_order_id" />
    <string name="text_hint">Null</string>
    <string name="account_id_text">會員編號：</string>
    <string name="text_account_id" />

    <string name="NoticeManage">訊息管理</string>
    <string name="Sand">送出</string>

    <string name="admin">管理者</string>
    <string name="logoutsuccess">登出成功</string>
    <string name="accountId">帳號</string>
    <string name="manageAdmin">員工帳號管理</string>
    <string name="adminId">編號</string>
    <string name="NewAdmin">新增管理員</string>
    <string name="typeYourNmae">&#160;&#160;&#160;&#160;請輸入姓名</string>
    <string name="typePassword">&#160;&#160;&#160;&#160;請輸入密碼</string>
    <string name="retypePassword">&#160;&#160;&#160;&#160;重新輸入密碼</string>
    <string name="typeAcountId">&#160;&#160;&#160;&#160;請輸入帳號</string>
    <string name="password">密碼</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="position">職位</string>
    <string name="lastStep">上一步</string>
    <string name="textInsertFail">輸入失敗</string>
    <string name="registerSuccess">註冊成功</string>


    <string name="text_order_status_text">訂單狀態：</string>
    <string name="text_order_status" />
    <string name="text_total_price_title">訂單總額：</string>
    <string name="text_total_price" />
    <string name="text_order_date" />
    <string name="text_order_text_text">訂購日期：</string>
    <string name="manageOrders">訂單管理</string>
    <string name="text_order_modify_date_text">上次修改日期：</string>
    <string name="text_order_modify_date" />
    <string name="textnofound">查無資料！</string>
    <string name="saleNotice">促銷訊息</string>

    <string name="order_detail_manage">訂單詳情</string>
    <string name="text_receiver_name">姓名：</string>
    <string name="receiver">收件者資料：</string>
    <string name="receiver_name" />
    <string name="text_phone">電話：</string>
    <string name="phone">電話:</string>
    <string name="text_address">地址：</string>
    <string name="address">地址：</string>
    <string name="text_cancel">取消修改</string>
    <string name="text_save">儲存變更</string>
    <string name="product_name" />
    <string name="text_product_price">售價：</string>
    <string name="product_price" />
    <string name="textSend">送出</string>

    <string name="hint_phone">電話</string>
    <string name="hint_address">地址</string>
    <string name="textUpdateFail">修改失敗</string>
    <string name="textUpdateSuccess">修改成功</string>

    <string name="productname">商品名稱:</string>
    <string name="productcolor">顏色:</string>
    <string name="productprice">價格:</string>
    <string name="productdetail">詳情:</string>
    <string name="productCategory">類別:</string>
    <string name="productStatus">狀態:</string>
    <string name="addproduct">新增商品</string>
    <string name="textTakePicture">拍照</string>
    <string name="textNoCameraApp">textNoCameraApp</string>
    <string name="insertsuccess">新增商品成功</string>
    <string name="insertfail">新增商品失敗</string>
    <string name="modify">修改</string>
    <string name="hint_rec_name" />
    <string name="hint_rec_phone" />
    <string name="hint_rec_address" />
    <string name="delet">刪除</string>
    <string name="hintNT">&#160;&#160;輸入訊息標題</string>
    <string name="hintND">&#160;&#160;輸入訊息內文</string>
    <string name="noNotice">沒有訊息</string>

    <string name="notice">通知</string>
    <string name="modifyAdmin">修改管理員</string>
    <string name="name2">姓名:</string>
    <string name="memberAccount">會員帳號:</string>
    <string name="takepicture">拍照</string>
    <string name="picture">從相簿取照片</string>


    <string name="textDelete">刪除</string>
    <string name="textDeleteFail">刪除失敗</string>
    <string name="textDeleteSuccess">刪除成功</string>

    <string name="rec_phone" />
    <string name="rec_address" />
    <string name="productid">商品ID:</string>
    <string name="productempty">查無商品</string>
    <string name="update">修改商品</string>
    <string name="insertproduct">新增商品</string>
    <string name="updatesuccess">修改成功</string>
    <string name="updatefail">修改失敗</string>

    <string name="chiocdate">選擇日期</string>

    <string name="shelvesproduct">下架</string>
    <string name="onsaleproduct">上架</string>
    <string name="promotion">促銷</string>
    <string name="NoticeSystemAdmin">管理系統訊息</string>
    <string name="NoticeSaleAdmin">管理促銷訊息</string>
    <string name="ordered_product_id" />
    <string name="PickDate">選取日期</string>
    <string name="NoticeAdmin">管理訊息</string>
    <string name="memberNew">提問回覆</string>
    <string name="tvenddate">請輸入結束日期</string>
    <string name="tvstartdate">請輸入開始日期</string>
    <string name="textPieChart">圓餅圖</string>
    <string name="instantMessage">即時發送</string>
    <string name="schedulingMessage">排程發送</string>
    <string name="NoticeSchdule">管理排程訊息</string>
    <string name="edStartNotice">請選擇開始時間</string>
    <string name="edEndNotice">請選擇結束時間</string>
    <string name="allProduct">全體促銷</string>
    <string name="oneProduct">單一商品促銷</string>
    <string name="selectProduct">請選擇商品:</string>
    <string name="noticeTitle">請輸入標題</string>
    <string name="noticeDetail">請輸入內文</string>


</resources>
