<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyReceiverDetailFragment" >

    <TextView
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/appbar"
        android:gravity="center"
        android:text="@string/order_detail_manage"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4">

        <TextView
            android:id="@+id/tvRecNameT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/text_receiver_name" />

        <EditText
            android:id="@+id/etRecName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/hint_rec_name"
            android:inputType="textPersonName"
            android:text="@string/receiver_name" />

        <TextView
            android:id="@+id/tvRecPhoneT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/text_phone" />

        <EditText
            android:id="@+id/etRecPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/hint_rec_phone"
            android:inputType="textPersonName"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/tvRecAddT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/text_address" />

        <EditText
            android:id="@+id/etRecAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/hint_rec_address"
            android:inputType="textPersonName"
            android:text="@string/address" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btCancelMRD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="#d8eacd"
            android:text="@string/text_cancel"
            android:textColor="@color/normal_text_color" />

        <Button
            android:id="@+id/btSaveMRD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#d8eacd"
            android:text="@string/text_save"
            android:textColor="@color/normal_text_color" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>